﻿	* SemaphoreLock now has overloads with CancellationToken.

9.0.0
	* .NET Standard DOES NOT WORK. Exterminated!

8.0.0
	* Now targeting .NET Standard 1.4 + .NET Framework 4.6.2 + UWP 10240.
	* Updated dependencies.
	* Renamed Core -> NetStandard.
	* Removed xunit console runner from use in development environment. It had issues with UWP. Not worth the effort.

7.1.2
	* Removed misleading commentary about SDK versions. We target 10240, that's it.

7.1.1
	* Fixed defect in PlayReadyLicenseAcquirer that caused reactive PlayReady activation to fail.

7.1.0
	* Added base64url to/from conversion helpers.
	* Added ProtectedXml helpers. You can now encrypt&sign and verify&decrypt XmlDocuments with a one-liner helper method. DotNet only, for now.
	* Added Jose helpers. You can now encrypt&sign and verify&decrypt arbitrary data packaged into JOSE objects with a one-liner helper method. DotNet only, for now. Uses jose-jwt underneath.

7.0.0
	* ErrorReport.Send() replaced with ErrorReport.Log(). The error reports are now written to the logging system instead of sent via email and event log. You are still able to accomplish the latter but you must use an appropriate log listener to do the actual delivery. This significantly simplifies the implementation and maintenace of ErrorReport.
	* ErrorReport contents rewritten to include less irrelevant spam. Some edge cases may no longer be supported. Scream if some important info is missing and it will likely be added to the next version.
	* Added Task.WithAbandonment() extension method, to abandon tasks.
	* Added timeout-enabled overload for HttpResponseMessage.EnsureSuccessStatusCodeAndReportFailureDetailsAsync().
	* UWP target platform upgraded to 10586 (minimum remains at 10240).
	* Updated UWP and NLog NuGet package dependencies.

6.9.0
	* ExternalTool now reports part of any error output in its exception message when an external tool failure is detected, for ease of diagnostics.

6.8.0